--- a/views/index.haml
+++ b/views/index.haml
@@ -7,7 +7,7 @@
     %meta(content="width=device-width, initial-scale=1.0" name="viewport")/
 
   %body
-    .chat-app(class="container")
+    .chat-app(class="container" data-scheme=scheme)
       %header(class="page-header")
         %h1
           \#codemotion
